sherpa-onnx/c-api/c-api.h

/** @brief Streaming decoding state for one utterance or stream. */
typedef struct SherpaOnnxOnlineStream SherpaOnnxOnlineStream;
// ============================================================
// For speaker embedding extraction
// ============================================================
/**
 * @brief Configuration for speaker embedding extraction.
 *
 * Example using
 * `3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx`:
 *
 * @code
 * SherpaOnnxSpeakerEmbeddingExtractorConfig config;
 * memset(&config, 0, sizeof(config));
 * config.model = "./3dspeaker_speech_campplus_sv_zh-cn_16k-common.onnx";
 * config.num_threads = 1;
 * config.provider = "cpu";
 * @endcode
 * @see SherpaOnnxCreateSpeakerEmbeddingExtractor
 */
typedef struct SherpaOnnxSpeakerEmbeddingExtractorConfig {
  /** Speaker embedding model file. */
  const char *model;
  /** Number of inference threads. */
  int32_t num_threads;
  /** Non-zero to print debug information. */
  int32_t debug;
  /** Execution provider such as `"cpu"`. */
  const char *provider;
} SherpaOnnxSpeakerEmbeddingExtractorConfig;
/** @brief Opaque speaker embedding extractor handle. */
typedef struct SherpaOnnxSpeakerEmbeddingExtractor
    SherpaOnnxSpeakerEmbeddingExtractor;
/**
 * @brief Create a speaker embedding extractor.
 *
 * @param config Speaker embedding extractor configuration.
 * @return A newly allocated extractor on success, or NULL on error. Free it
 *         with SherpaOnnxDestroySpeakerEmbeddingExtractor().
 * @see SherpaOnnxSpeakerEmbeddingExtractorConfig, SherpaOnnxDestroySpeakerEmbeddingExtractor
 */
SHERPA_ONNX_API const SherpaOnnxSpeakerEmbeddingExtractor *
SherpaOnnxCreateSpeakerEmbeddingExtractor(
    const SherpaOnnxSpeakerEmbeddingExtractorConfig *config);
/**
 * @brief Destroy a speaker embedding extractor.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @see SherpaOnnxCreateSpeakerEmbeddingExtractor
 */
SHERPA_ONNX_API void SherpaOnnxDestroySpeakerEmbeddingExtractor(
    const SherpaOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Return the embedding dimension produced by the extractor.
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @return Embedding dimension.
 */
SHERPA_ONNX_API int32_t SherpaOnnxSpeakerEmbeddingExtractorDim(
    const SherpaOnnxSpeakerEmbeddingExtractor *p);
/**
 * @brief Create a streaming feature buffer for embedding extraction.
 *
 * Feed samples with SherpaOnnxOnlineStreamAcceptWaveform(), then call
 * SherpaOnnxSpeakerEmbeddingExtractorIsReady() and
 * SherpaOnnxSpeakerEmbeddingExtractorComputeEmbedding().
 *
 * @param p A pointer returned by SherpaOnnxCreateSpeakerEmbeddingExtractor().
 * @return A newly allocated online stream. Free it with
 *         SherpaOnnxDestroyOnlineStream().
 */
SHERPA_ONNX_API const SherpaOnnxOnlineStream *
SherpaOnnxSpeakerEmbeddingExtractorCreateStream(
    const SherpaOnnxSpeakerEmbeddingExtractor *p);